Added rest model so to unbind database layer from rest resources